[MMC-12] Added Kafka consumer and producer

--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,8 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.azure.spring</groupId>
-			<artifactId>spring-cloud-azure-stream-binder-servicebus</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
 		</dependency>
 		<!-- Da verificare-->
 		<dependency>
