--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
+/.mvn/wrapper/maven-wrapper.properties
 !**/src/main/**/target/
 !**/src/test/**/target/
+/src/test/resources/secrets/*
+/mvnw
+/mvnw.cmd
 
 ### STS ###
 .apt_generated
@@ -32,5 +36,4 @@ build/
 ### VS Code ###
 .vscode/
 
-/helm/charts/*
-/src/test/resources/secrets/*
+
