added static frontend

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,13 @@ spring:
     name: "@project.artifactId@"
     version: "@project.version@"
   jmx.enabled: true
+  resources:
+    static-locations: classpath:/static/
+    cache:
+      cachecontrol:
+        max-age: 3600
+        no-transform: true
+        must-revalidate: true
   config:
     activate:
       on-profile: default
