--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -29,19 +29,11 @@ jobs:
           java-version: '17'
           cache: 'maven'
 
-      - name: Build with Maven
-        run: mvn clean install
-
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@e44258b109568baa0df60ed515909fc6c72cba92 #v2.3.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.organization=${{ vars.SONARCLOUD_ORG }}
-            -Dsonar.projectKey=${{ vars.SONARCLOUD_PROJECT_KEY }}
-            -Dsonar.projectName="${{ vars.SONARCLOUD_PROJECT_NAME }}"
-            -Dsonar.java.binaries=target/classes
-            -Dsonar.exclusions="**/enums/**, **/model/**, **/stub/**, **/dto/**, **/*Constant*, **/*Config.java, **/*Scheduler.java, **/*Application.java, **/src/test/**, **/Dummy*.java"
-
+      - name: Build with Maven and SonarCloud
+        run: mvn clean install org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+          -Dsonar.organization=${{ vars.SONARCLOUD_ORG }} \
+          -Dsonar.projectKey=${{ vars.SONARCLOUD_PROJECT_KEY }} \
+          -Dsonar.projectName="${{ vars.SONARCLOUD_PROJECT_NAME }}" \
+          -Dsonar.java.binaries=target/classes \
+          -Dsonar.exclusions=**/enums/**,**/model/**,**/dto/**,**/*Constant*,**/*Config.java,**/*Scheduler.java,**/*Application.java,**/src/test/**,**/Dummy*.java \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
