--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,4 +1,4 @@
-name: EMD - CodeReview
+name: Java CI with Maven and SonarCloud
 
 on:
   pull_request:
@@ -9,43 +9,59 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 #v4.1.7
-        with:
-          fetch-depth: 0
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Setup Java
-        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 #v4.2.1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
-          distribution: 'corretto'
-          java-version: 17
-
-      - name: Set up Apache Maven
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'corretto'
+          distribution: 'adopt'
           java-version: '17'
-          cache: 'maven'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Cache Maven dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-      - name: Copy dependencies
-        run: mvn dependency:copy-dependencies
-
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@e44258b109568baa0df60ed515909fc6c72cba92 #v2.3.0
+      - name: Prepare SonarCloud analysis
+        uses: sonarsource/sonarcloud-github-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          args: >
-            -Dsonar.organization=${{ vars.SONARCLOUD_ORG }}
-            -Dsonar.projectKey=${{ vars.SONARCLOUD_PROJECT_KEY }}
-            -Dsonar.projectName="${{ vars.SONARCLOUD_PROJECT_NAME }}"
-            -Dsonar.java.binaries=target/classes
-            -Dsonar.java.libraries=target/dependency/*.jar
-            -Dsonar.exclusions=**/enums/**,**/model/**,**/stub/**,**/dto/**,**/*Constant*,**/*Config.java,**/*Scheduler.java,**/*Application.java,**/src/test/**,**/Dummy*.java
-            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml,target/site/jacoco-it/jacoco.xml,build/reports/jacoco/test/jacocoTestReport.xml
+          organization: ${{ vars.SONARCLOUD_ORG }}
+          projectKey: ${{ vars.SONARCLOUD_PROJECT_KEY }}
+          projectName: ${{ vars.SONARCLOUD_PROJECT_NAME }}
+          scannerMode: 'CLI'
+          extraProperties: |
+            sonar.exclusions=**/enums/**,**/model/**,**/stub/**,**/dto/**,**/*Constant*,**/*Config.java,**/*Scheduler.java,**/*Application.java,**/src/test/**,**/Dummy*.java
+
+      - name: Build and run tests with Maven
+        run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent verify org.jacoco:jacoco-maven-plugin:report org.jacoco:jacoco-maven-plugin:report-aggregate --batch-mode --file pom.xml
+        env:
+          MAVEN_OPTS: '-Dmaven.repo.local=$HOME/.m2/repository'
+
+      - name: Find jacoco.xml reports
+        run: |
+          xmlReportPaths=$(find "$(pwd)" -path '**/target/site/jacoco/*.xml' | tr '\n' ',')
+          echo "##vso[task.setvariable variable=xmlReportPaths]$xmlReportPaths"
+
+      - name: Analyze with SonarCloud
+        run: mvn sonar:sonar --batch-mode --file pom.xml -Dsonar.coverage.jacoco.xmlReportPaths=$xmlReportPaths
+        env:
+          MAVEN_OPTS: '-Dmaven.repo.local=$HOME/.m2/repository'
+
+      - name: Publish SonarCloud results
+        uses: sonarsource/sonarcloud-github-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          organization: ${{ vars.SONARCLOUD_ORG }}
+          waitForQualityGate: 'true'
