--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -40,6 +40,8 @@ jobs:
           projectName: ${{ vars.SONARCLOUD_PROJECT_NAME }}
           scannerMode: 'CLI'
           extraProperties: |
+            sonar.projectKey=${{ vars.SONARCLOUD_PROJECT_KEY }}
+            sonar.projectName="${{ vars.SONARCLOUD_PROJECT_NAME }}"
             sonar.exclusions=**/enums/**,**/model/**,**/stub/**,**/dto/**,**/*Constant*,**/*Config.java,**/*Scheduler.java,**/*Application.java,**/src/test/**,**/Dummy*.java
 
       - name: Build and run tests with Maven
