--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -56,9 +56,11 @@ jobs:
           echo "##vso[task.setvariable variable=xmlReportPaths]$xmlReportPaths"
 
       - name: Analyze with SonarCloud
-        run: mvn sonar:sonar --batch-mode --file pom.xml -Dsonar.coverage.jacoco.xmlReportPaths=$xmlReportPaths
+        run: mvn sonar:sonar --batch-mode --file pom.xml -Dsonar.coverage.jacoco.xmlReportPaths=$xmlReportPaths \
+          -Dsonar.exclusions=**/*.java,**/enums/**,**/model/**,**/stub/**,**/dto/**,**/*Constant*,**/*Config.java,**/*Scheduler.java,**/*Application.java,**/src/test/**,**/Dummy*.java
         env:
           MAVEN_OPTS: '-Dmaven.repo.local=$HOME/.m2/repository'
+
 
       - name: Publish SonarCloud results
         uses: sonarsource/sonarcloud-github-action@v2
