--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -40,8 +40,8 @@ jobs:
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@e44258b109568baa0df60ed515909fc6c72cba92
         env:
-          GITHUB_TOKEN: ${{ vars.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ vars.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
             -Dsonar.organization=${{ vars.SONARCLOUD_ORG }}
