--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,51 +1,48 @@
-name: EMD - CodeReview
+name: SonarCloud Analysis
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
-    types:
-      - opened
-      - edited
-      - synchronize
+    branches:
+      - main
 
 jobs:
-  build:
+  sonarcloud:
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 #v4.1.7
-        with:
-          fetch-depth: 0
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          distribution: 'corretto'
-          java-version: 17
-
-      - name: Set up Apache Maven
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'corretto'
+          distribution: 'adopt'
           java-version: '17'
-          cache: 'maven'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Build and test with Maven
         run: mvn clean org.jacoco:jacoco-maven-plugin:0.8.8:prepare-agent verify org.jacoco:jacoco-maven-plugin:0.8.8:report org.jacoco:jacoco-maven-plugin:0.8.8:report-aggregate -B
 
-      - name: Copy dependencies
-        run: mvn dependency:copy-dependencies
-
       - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@e44258b109568baa0df60ed515909fc6c72cba92
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.organization=${{ vars.SONARCLOUD_ORG }}
-            -Dsonar.projectKey=${{ vars.SONARCLOUD_PROJECT_KEY }}
-            -Dsonar.projectName="${{ vars.SONARCLOUD_PROJECT_NAME }}"
-            -Dsonar.java.binaries=target/classes
-            -Dsonar.java.libraries=target/dependency/*.jar
-            -Dsonar.exclusions=**/enums/**,**/model/**,**/stub/**,**/dto/**,**/*Constant*,**/*Config.java,**/*Scheduler.java,**/*Application.java,**/src/test/**,**/Dummy*.java
-            -Dsonar.coverage.jacoco.xmlReportPaths=**/site/jacoco/jacoco.xml
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: mvn sonar:sonar \
+          -Dsonar.projectKey=${{ vars.SONARCLOUD_PROJECT_KEY }}\
+          -Dsonar.organization=${{ vars.SONARCLOUD_ORG }} \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+          -Dsonar.java.binaries=target/classes \
+          -Dsonar.junit.reportPaths=target/surefire-reports \
+          -Dsonar.jacoco.reportPaths=target/jacoco.exec
