--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -38,7 +38,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: mvn sonar:sonar \
+        run: |
+         mvn sonar:sonar \
           -Dsonar.projectKey=${{ vars.SONARCLOUD_PROJECT_KEY }} \
           -Dsonar.organization=${{ vars.SONARCLOUD_ORG }} \
           -Dsonar.host.url=https://sonarcloud.io \
