fix: udpate code review

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -52,3 +52,6 @@ jobs:
             -Dsonar.junit.reportPaths=target/surefire-reports \
             -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
             -Dsonar.exclusions=**/enums/**,**/model/**,**/stub/**,**/dto/**,**/*Constant*,**/*Config.java,**/*Scheduler.java,**/*Application.java,**/src/test/**,**/Dummy*.java
+
+      - name: Fetch all branches
+        run: git fetch --all
