--- a/pom.xml
+++ b/pom.xml
@@ -99,14 +99,9 @@
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-openfeign-core</artifactId>
-			<version>4.1.3</version>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.github.openfeign</groupId>
-			<artifactId>feign-core</artifactId>
-			<version>13.3</version>
-		</dependency>
+
 
 
 	</dependencies>
@@ -132,6 +127,11 @@
 				<artifactId>xmlunit-core</artifactId>
 				<version>2.10.0</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>6.1.14</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
