--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,7 +74,9 @@ spring:
           consumerCommands-in-0:
             consumer:
               startOffset: ${KAFKA_COMMANDS_REQUEST_START_OFFSET:${KAFKA_CONSUMER_CONFIG_START_OFFSET:earliest}}
-              autoCommitOffset: ${KAFKA_COMMANDS_AUTO_COMMIT:${KAFKA_CONSUMER_CONFIG_AUTO_COMMIT:true}}
+              autoCommitOffset: false
+              ackMode: MANUAL_IMMEDIATE
+              ackTime: ${KAFKA_COMMANDS_ACK_MILLIS:500}
               standardHeaders: ${KAFKA_COMMANDS_STANDARD_HEADERS:${KAFKA_CONSUMER_CONFIG_STANDARD_HEADERS:both}}
               configuration:
                 max.poll:
@@ -87,7 +89,10 @@ spring:
 
 
 app:
-  retry.max-retry: ${ERROR_MESSAGE_MAX_RETRY:5}
+  message-core:
+    build-delay-duration: ${BENEFICIARY_RULE_BUILD_DELAY_DURATION:PT1S}
+  retry:
+    max-retry: ${ERROR_MESSAGE_MAX_RETRY:5}
   token:
     client: ${HYPE_KEY:}
     clientId: ${HYPE_CLIENT:}
