feat: added release uat

--- a/.github/workflows/snapshot-docker.yml
+++ b/.github/workflows/snapshot-docker.yml
@@ -2,6 +2,8 @@ name: Snapshot docker build and push
 
 on:
   push:
+    branches:
+      - release-*
     # Sequence of patterns matched against refs/heads
     branches-ignore:
       - 'main'
