--- a/pom.xml
+++ b/pom.xml
@@ -129,9 +129,22 @@
 				<version>2.10.0</version>
 				<scope>test</scope>
 			</dependency>
+
+			<dependency>
+				<groupId>net.minidev</groupId>
+				<artifactId>json-smart</artifactId>
+				<version>2.5.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-handler</artifactId>
+				<version>4.1.118.Final</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
+				<artifactId>spring-webflux</artifactId>
 				<version>6.1.14</version>
 			</dependency>
 		</dependencies>
