--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
 	<version>0.0.1</version>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
+		<depcheck-plugin.version>1.3.0</depcheck-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -128,9 +129,22 @@
 				<version>2.10.0</version>
 				<scope>test</scope>
 			</dependency>
+
+			<dependency>
+				<groupId>net.minidev</groupId>
+				<artifactId>json-smart</artifactId>
+				<version>2.5.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.netty</groupId>
+				<artifactId>netty-handler</artifactId>
+				<version>4.1.118.Final</version>
+			</dependency>
+
 			<dependency>
 				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
+				<artifactId>spring-webflux</artifactId>
 				<version>6.1.14</version>
 			</dependency>
 		</dependencies>
@@ -151,7 +165,30 @@
 					</excludes>
 				</configuration>
 			</plugin>
-		</plugins>
-	</build>
-
+			<plugin>
+				<groupId>it.pagopa.maven</groupId>
+				<artifactId>depcheck</artifactId>
+				<version>${depcheck-plugin.version}</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<fileName>dep-sha256.json</fileName>
+					<includePlugins>false</includePlugins>
+					<includeParent>false</includeParent>
+				</configuration>
+			</plugin>
+	</plugins>
+</build>
+<pluginRepositories>
+	<pluginRepository>
+		<id>github</id>
+		<url>https://maven.pkg.github.com/pagopa/depcheck</url>
+	</pluginRepository>
+</pluginRepositories>
 </project>
