--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,18 @@
 				<artifactId>spring-webflux</artifactId>
 				<version>6.1.14</version>
 			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-crypto</artifactId>
+				<version>6.3.8</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.14.0</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
