--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
 		</dependency>
+		<!-- OpenAPI -->
+		<dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
 		<!-- Da verificare-->
 		<dependency>
 			<groupId>com.azure.spring</groupId>
